--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
 
+    <div class="game-window">
+      
+    </div>
     <footer></footer>
     <script type="module" src="app.js" type="text/javascript">
 
